# sendit

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  hk.pkl  mise.toml  release-plz.toml
.github/homebrew/: sendit.rb
.github/workflows/: ci.yml  release-plz.yml
src/: cli.rs  context.rs  editor.rs  error.rs  gh.rs  git.rs  lib.rs  main.rs  pr.rs  summary.rs
tests/: cli.rs
