[package]
name = "sendit"
version = "0.1.0"
edition = "2021"
description = "Push the current branch and open a GitHub PR with a human-authored title/body"

[[bin]]
name = "sendit"
path = "src/main.rs"

[lib]
name = "sendit"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
