[package]
name = "sendit"
version = "0.1.2"
edition = "2021"
description = "High-level library for creating PRs (e.g. GitHub) with Rust."
license = "MIT OR Apache-2.0"

[[bin]]
name = "sendit"
path = "src/main.rs"

[lib]
name = "sendit"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
